# carol

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  diesel.toml
.github/workflows/: ci.yaml  coverage.yml
carol/: Cargo.toml  diesel.toml
carol-reqwest-middleware/: Cargo.toml  README.md
carol-reqwest-middleware/examples/: get_file.rs
carol-reqwest-middleware/src/: lib.rs
carol/examples/: web_api.rs
carol/src/: cache_policy.rs  database.rs  error.rs  file.rs  lib.rs  pool.rs  reqwest_middleware.rs  storage_config.rs  storage_manager.rs
carol/src/sqlite/: api.rs  error.rs  mod.rs  models.rs  schema.rs
carol/src/sqlite/migrations/2025-04-14-180526_init/: down.sql  up.sql
examples/: download_and_gc.rs  garbage_collection_with_cron.rs  garbage_collector.rs  web_api.rs
migrations/2025-03-21-165326_init/: up.sql
old_carol/: Cargo.toml
old_carol/src/: errors.rs  main.rs
old_carol/src/database/sqlite/: api.rs  database_stresstest.rs  mod.rs  schema.rs
old_carol/src/maintenance/: cleaner.rs
scripts/: local_checks.sh
src/: cache_policy.rs  cli.rs  client.rs  database.rs  errors.rs  file.rs  garbage_collector.rs  lib.rs  main.rs  maintenance.rs  models.rs  pool.rs  schema.rs
src/cli/: mod.rs
src/database/: api.rs  database_stresstest.rs  mod.rs  models.rs  schema.rs
src/database/migrations/2025-03-28-131226_init/: up.sql
src/maintenance/: cleaner.rs  mod.rs
src/tests/: client.rs  database.rs  database_stresstest.rs  mod.rs
storage/: Cargo.toml
storage/src/: database.rs  error.rs  file.rs  lib.rs  models.rs  storage_manager.rs  store_policy.rs
storage/src/sqlite/: api.rs  error.rs  mod.rs  models.rs  schema.rs
storage/src/sqlite/migrations/2025-04-14-180526_init/: up.sql
tests/: client.rs
