[package]
name = "carol"
version = "0.1.0"
authors = ["Gevulot Team"]
edition = "2021"
repository = "https://github.com/gevulotnetwork/carol"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[features]
default = []

# Enables database stress-testing while running `cargo test`
# Doesn't affect the library itself
stresstest = []

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "string"] }
chrono = { version = "0.4", features = ["serde"] }
deadpool = "0.12"
derive_builder = "0.20"
directories = "6"
diesel = { version = "2", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "chrono",
] }
diesel-async = { version = "0.5", features = [
    "async-connection-wrapper",
    "sqlite",
    "pool",
    "deadpool",
] }
diesel_migrations = "2"
eyre = "0.6"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["rustls-tls", "stream"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
tokio-stream = "0.1"
sha256 = "1.5"

[dev-dependencies]
http-test-server = "2"
rand = "0.9"
rstest = "0.25"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
tokio-cron-scheduler = { version = "0.13", features = ["signal"] }
tokio-test = "0.4"
tracing-test = "0.2"
warp = "0.3"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(tarpaulin_include)'] }
