[package]
name = "carol-reqwest-middleware"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1"
content_disposition = "0.4"
http = "1"
reqwest = { version = "0.12", features = ["stream"] }
reqwest-middleware = "0.4"
serde = "1"
serde_json = "1"

[dependencies.carol]
version = "0.1.0"
path = "../carol"

[dev-dependencies]
http-test-server = "2"
reqwest = { version = "0.12", features = ["json"] }
rstest = "0.25"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
