[package]
name = "carol"
version = "0.1.0"
authors = ["Gevulot Team"]
edition = "2021"
repository = "https://github.com/gevulotnetwork/carol"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[dependencies]
async-trait = "0.1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
diesel-async = { version = "0.5", features = ["async-connection-wrapper", "sqlite", "pool", "deadpool"] }
diesel_migrations = { version = "2" }
futures-util = { version = "0.3", features = ["io"] }
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["time"] }
sha256 = "1.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = { version = "2", features = ["serde"] }
