[package]
name = "carol"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.88"
bytes = "1.10.1"
chrono = { version = "0.4.40", features = ["serde"] }
diesel = { version = "2.2.9", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
diesel-async = { version = "0.5.2", features = ["async-connection-wrapper", "sqlite", "pool", "deadpool"] }
diesel-enum = "0.2.1"
diesel_migrations = "2.2.0"
futures-util = { version = "0.3.31", features = ["io"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha256 = "1.6.0"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["time"] }
tokio-util = { version = "0.7.14", features = ["codec"] }
tracing = "0.1.41"
url = { version = "2.5.4", features = ["serde"] }

[dev-dependencies]
mockall = "0.13.1"
rstest = "0.25.0"
tempfile = "3.19.1"
tokio = { version = "1.44.2", features = ["rt", "macros"] }
tokio-test = "0.4.4"
tracing-test = "0.2.5"
