[package]
name = "storage"
version = "0.1.0"
authors = ["Gevulot Team"]
edition = "2021"
repository = "https://github.com/gevulotnetwork/carol"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[features]
default = ["sqlite"]

sqlite = ["dep:diesel", "dep:diesel-async", "dep:diesel_migrations", "dep:futures-util"]

[dependencies]
async-trait = "0.1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"], optional = true }
diesel-async = { version = "0.5", features = ["async-connection-wrapper", "sqlite", "pool", "deadpool"], optional = true }
diesel_migrations = { version = "2", optional = true }
futures-util = { version = "0.3", features = ["io"], optional = true }
thiserror = "2"
tracing = "0.1"
tokio = "1"
sha256 = "1.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = { version = "2", features = ["serde"] }
